# CI-CD_monitoring_testing-practice

./: .coverage  .coveragerc_1  .gitignore  Dockerfile  best_model_single_20250621_080206.pth  deploy.py  dvc.yaml  index.html  main.py  main.tf  preprocess.py  requirements.txt  train.py  variables.tf
.github/workflows/: Build_and_deploy_container.yml  Caching.yml  MLOps Automated_Testing_Example.yml  MLOps_pipeline_example.yml  MLOps_pipeline_with_caching.yml  MLOps_resource_optimization_pipeline.yml  ML_model_deployment_pipeline.yml  ML_model_deployment_with_secrets.yml  advanced_parallelization_with_job_matrix.yml  all_types_PR_combined.yml  automated_retrain_PR_workflow.yml  automated_rollback_workflow.yml  basic_syntax_secrets.yml  build-test-workflow.yml  combined_all_PR_types_event.yml  conditional_job_execution.yml.yml  conditional_statements_events.yml  deploy.yml  different_secrets_for_different_environments.yml  docker_layer_caching.yml  dynamic_matrix_creation.yml  environment_variables.yml  github_secrets.yml  integration-test-workflow.yml  jobs_sequencing.yml  matrix_strategies_for_multi_environment_testing.yml  ml_deployment_pipeline_utilizing_terraform_for_iac.yml  mlops_container_matrix_build.yml  model_validation_gates_pipeline.yml  opened_PR_event.yml  parallel_jobs_workflows.yml  parallel_pytest_workflow.yml  path_based_filtering.yml  performance_monitoring.yml  preventing_workflow_deactivation.yml  repository-dispatch-event.yml  resource_caps_limits..yml  rough.yml  schedulingActions.yml  self_hosted_runners.yml  (+7 more)
data/raw/: some_samples_of_UAH_power_grid_dataset.txt
deploy/: k8s.yaml
feedback-loop/: docker-compose.yml  requirements.txt  train_model.py
feedback-loop/airflow/: dag_retrain.py
feedback-loop/api/: Dockerfile  app.py  model.pkl
feedback-loop/monitor/: Dockerfile  drift_check.py
logging_airflow_workflows_and_more/: data_drift_monitoring.yml  evidently_dashboard.py  loguru_logging.py  mlfow_logging.py
prometheus-practice/: Dockerfile  alertmanager.yml  alerts.yml  app.py  docker-compose.yml  prometheus.yml
tests/: addfinalizer_fixture.py  automated_rollback.py.py  comprehensive_quality_gate.py  conftest.py  conftest_example.py  conftest_example_2.py  docker_layer_caching.yml  factory_fixtures.py  fixture_dependencies.py  ml_specific_tseting_patterns.py  model_validation_fixtures.py  multi_param_fixtures.py  performance_testing.py  pyproject.toml  pyproject_1.toml  pytest (1).ini  setup.cfg  test_basic.py  test_basic_2.py  test_calculator.py  test_complete_mlops_pipeline.py  test_conftest.py  test_data_validation.py  test_fixtures_1.py  test_fixtures_function_scope.py  test_fixtures_scope_class.py  test_fixtures_scope_module.py  test_fixtures_scope_package.py  test_fixtures_scope_session.py  test_mlops_categories.py  test_mlops_pipeline.py  test_model_debugging.py  test_model_validation.py  test_performance.py  unit_testing_example.py  unit_tests.py  yield_fixture.py  yield_fixture_temp_file.py
tests/src/: calculator.py
