# setup.cfg - Legacy configuration format (still widely used)
[metadata]
name = mlops-coverage-example
version = 0.1.0
description = MLOps project demonstrating coverage thresholds
long_description = file: README.md
long_description_content_type = text/markdown
author = MLOps Team
author_email = mlops@company.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    numpy>=1.21.0
    scikit-learn>=1.0.0
    pytest>=6.0.0
    pytest-cov>=3.0.0

[options.packages.find]
where = src

[options.extras_require]
dev = 
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950
    pre-commit>=2.15.0

# Pytest configuration in setup.cfg format
[tool:pytest] 
addopts = 
    --cov=src
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml:coverage.xml
    --cov-fail-under=80
    --cov-branch
    --strict-markers
    -v

testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*

markers =
    unit: Unit tests
    integration: Integration tests  
    performance: Performance tests

# Coverage configuration in setup.cfg format
[coverage:run]
source = src
branch = True
omit = 
    tests/*
    setup.py
    */venv/*
    */__pycache__/*

[coverage:report]
exclude_also =
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    @(abc\.)?abstractmethod
    if TYPE_CHECKING:
    pragma: no cover

fail_under = 80
precision = 2
show_missing = True
skip_covered = False
skip_empty = True
sort = -Cover

[coverage:html]
directory = htmlcov
title = MLOps Project Coverage Report

[coverage:xml] 
output = coverage.xml

# Flake8 linter configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    build,
    dist